--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,11 @@ dependencies:
   provider: ^6.1.2
   flutter_riverpod: ^2.5.1
   flutter_inner_shadow: ^0.0.1
-  buttons_flutter: ^0.0.2+1
   get: ^4.6.6
   intl: ^0.19.0
   vibration: ^1.7.7
   shimmer: ^3.0.0
+  kakao_flutter_sdk: ^1.3.1
 
 
 dev_dependencies:
