--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   shimmer: ^3.0.0
   kakao_flutter_sdk: ^1.3.1
   image_picker: ^1.1.2
+  auto_size_text: ^3.0.0
+  path_provider: ^2.1.3
 
 
 dev_dependencies:
