--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,10 +50,10 @@ dependencies:
   intl: ^0.19.0
   vibration: ^1.7.7
   shimmer: ^3.0.0
-  kakao_flutter_sdk: ^1.3.1
   image_picker: ^1.1.2
   auto_size_text: ^3.0.0
   path_provider: ^2.1.3
+  kakao_flutter_sdk_user: ^1.9.0
 
 
 dev_dependencies:
