--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   simple_shadow: ^0.3.1
-  flutter_html: ^2.2.1
+  flutter_html: ^3.0.0-beta.2
   http: ^1.2.1
   shared_preferences: ^2.2.3
   flutter_svg: ^0.23.0+1
@@ -54,6 +54,8 @@ dependencies:
   auto_size_text: ^3.0.0
   path_provider: ^2.1.3
   kakao_flutter_sdk_user: ^1.9.0
+  url_launcher: ^6.3.0
+  flutter_linkify: ^6.0.0
 
 
 dev_dependencies:
