--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
         android:label="events_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        android:enableOnBackInvokedCallback="true"
+        android:largeHeap="true">
 
         <activity 
             android:name="com.kakao.sdk.flutter.AuthCodeCustomTabsActivity"
@@ -13,9 +15,6 @@
             <action android:name="android.intent.action.VIEW" />
             <category android:name="android.intent.category.DEFAULT" />
             <category android:name="android.intent.category.BROWSABLE" />
-
-            <!-- "kakao${YOUR_NATIVE_APP_KEY}://oauth" 형식의 앱 실행 스킴 설정 -->
-            <!-- 카카오 로그인 Redirect URI -->
             <data android:scheme="kakao5e5652ca00ba8ebde815f16aeceab628" android:host="oauth"/>
         </intent-filter>
     </activity>
@@ -35,6 +34,7 @@
                  to determine the Window background behind the Flutter UI. -->
             <meta-data
               android:name="io.flutter.embedding.android.NormalTheme"
+              android:value="5e5652ca00ba8ebde815f16aeceab628"
               android:resource="@style/NormalTheme"
               />
             <intent-filter>
