--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   kakao_flutter_sdk_user: ^1.9.0
   url_launcher: ^6.3.0
   flutter_linkify: ^6.0.0
+  flutter_slidable: ^3.1.1
 
 
 dev_dependencies:
